Pequeña optimización